fix vertical alignment below 970px for drawer headers

--- a/src/sass/app_2/_common/drawer/drawer.scss
+++ b/src/sass/app_2/_common/drawer/drawer.scss
@@ -102,7 +102,7 @@ hr {
                     display: flex;
                     flex-direction: row-reverse;
                     justify-content: space-between;
-                    align-items: stretch;
+                    align-items: center;
                     border-bottom: 1px solid $COLOR_GRAY;
 
                     .icons {
